<?xml version="1.0"?>
<package format="2">
  <name>decawave_ros</name>
  <version>0.1.0</version>
  <description>The decawave_ros package</description>

  <maintainer email="jia.huang@tamu.edu">Jia Huang</maintainer>
  <author email="jia.huang@tamu.edu">Jia Huang</author>
  <!-- <url type="website">http://wiki.ros.org/decawave_ros</url> -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>   

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


</package>
